ServiceMesh/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingme-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pingme
  template:
    metadata:
      labels:
        app: pingme
    spec:
      containers:
      - image: fpommerening/docker-training:microservice.pingme.dotnet
        name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time-dotnet-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: time
      lang: dotnet
  template:
    metadata:
      labels:
        app: time
        lang: dotnet
    spec:
      containers:
      - image: fpommerening/docker-training:microservice.time.dotnet
        name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time-php-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: time
      lang: php
  template:
    metadata:
      labels:
        app: time
        lang: php
    spec:
      containers:
      - image: fpommerening/docker-training:microservice.time.php
        name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-dep
spec:
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - image: fpommerening/docker-training:microservice.ui.dotnet
        imagePullPolicy: Always
        name: app
